# WDSO-KZ

./: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac  main.c  objetosci.c  objetosci.h  pola.c  pola.h
